# diffsel

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
data/: samhd1_short.ali  toy_0.ali  toy_0.tree  toy_interleaved_repeated.ali
data/c3c4/: amaranth.2cond  amaranth.3cond
data/samhd1/: samhd1.ali  samhd1.fasta  samhd1.tree
data/toy/: toy.tree  toy_interleaved_notrepeated.ali
script/: add-header.py  add_header  build_subst_matrices.Rev  convergence.R  diffsel_script_utils.py  generate-toy.py  generate_toy  generate_toy.py  non-regression-test  non_regression_test  plotdist  remove_indels.py  rev_matrix_generator.py  sparse_model.Rev  trace-plotdist  trace_analyzer
sources/: Array.hpp  BranchArray.hpp  BranchSiteArray.hpp  BranchSitePath.cpp  BranchSitePath.hpp  Chain.cpp  CodonStateSpace.cpp  CodonStateSpace.hpp  CodonSubMatrix.hpp  CodonSubMatrixArray.hpp  CodonSuffStat.hpp  DiffSelModel.hpp  GTRSubMatrix.cpp  GTRSubMatrix.hpp  IIDGamma.hpp  MSCodonSubMatrix.cpp  MSCodonSubMatrix.hpp  Makefile  PathSuffStat.hpp  PhyloProcess.cpp  PhyloProcess.hpp  PoissonSuffStat.hpp  Random.cpp  Random.hpp  SequenceAlignment.cpp  SingleOmegaModel.hpp  SiteOmega.cpp  SiteOmegaMixtureModel.hpp  SiteOmegaModel.hpp  StateSpace.hpp  SubMatrix.cpp  SubMatrix.hpp  SuffStat.hpp  Tree.cpp  a.out  essai.cpp
sources.flat/: BranchIIDExpo.hpp  BranchIIDGamma.hpp  Chain.hpp  CodonSequenceAlignment.hpp  DiffSelModel.hpp  MSCodonSubMatrix.hpp  Makefile  MultiGeneSingleOmega.cpp  MultiGeneSingleOmegaModel.hpp  PhyloProcess.hpp  ProbModel.hpp  Random.cpp  SingleOmega.cpp  SingleOmegaModel.hpp  Tree.hpp  cpplist  diff  jph.hpp  linalg2.cpp
sources.old/: Arrays.hpp  BranchSitePath.hpp  Chrono.cpp  DiffSel.cpp  DiffSelModel.hpp  GTRSubMatrix.hpp  Makefile  PhyloProcess.cpp  PhyloProcess.hpp  SequenceAlignment.cpp  SingleOmegaModel.hpp  SubMatrix.cpp  Tree.hpp  template.hpp
src/: BiologicalSequences.cpp  BiologicalSequences.hpp  BranchSitePath.cpp  BranchSitePath.hpp  Chain.cpp  Chain.hpp  Chrono.cpp  Chrono.hpp  CodonSequenceAlignment.cpp  CodonSequenceAlignment.hpp  CodonStateSpace.cpp  CodonStateSpace.hpp  CodonSubMatrix.cpp  CodonSubMatrix.hpp  DiffSel.cpp  DiffSelModel.hpp  DiffSelSparse.cpp  DiffSelSparseModel.hpp  GTRSubMatrix.cpp  GTRSubMatrix.hpp  GammaSuffStats.hpp  MSCodonSubMatrix.cpp  MSCodonSubMatrix.hpp  Makefile  MultiGeneSingleOmega.cpp  MultiGeneSingleOmegaModel.hpp  PathSuffStat.hpp  PhyloProcess.cpp  PhyloProcess.hpp  ProbModel.hpp  Random.cpp  Random.hpp  ReadDiffSel.cpp  Sample.cpp  Sample.hpp  SequenceAlignment.cpp  SequenceAlignment.hpp  Simulator.cpp  SingleOmega.cpp  SingleOmegaModel.hpp  (+17 more)
utils/: Correlation.cpp  TraceComp.cpp
